# PurrLang

./: .gitignore  Cargo.toml  README.md
catnip/: Cargo.toml
catnip/src/: build_command.rs  cache.rs  main.rs  project.rs  sb3.rs
codegen/: Cargo.toml
codegen/src/: blocks.rs  lib.rs
common/: Cargo.toml
common/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  value.rs
compiler/tests/: other.rs  procedures.rs  simple_trigger.rs  variables.rs
error/: Cargo.toml
error/src/: info.rs  lib.rs
examples/hello_world/: Catnip.toml
examples/hello_world/src/: cat.purr
libraries/scratch/: lib.purr  looks.purr  math.purr  motion.purr  operators.purr  sensing.purr
libraries/scratch/extensions/: pen.purr
libraries/std/: io.purr  math.purr
optimizer/: Cargo.toml
optimizer/src/: lib.rs  tree_shaking.rs
parser/: Cargo.toml
parser/src/: ast.rs  lib.rs  parser.rs
resolution/: Cargo.toml
resolution/src/: lib.rs  project_tree.rs  resolve.rs  resolve_types.rs
resolution/tests/: name_resolution.rs  type_resolution.rs
