[workspace.package]
repository = "https://github.com/olix3001/PurrLang"

[workspace]
resolver = "2"
members = [".", "common", "error", "parser", "resolution"]

[workspace.dependencies]
internment = "0.8.3"
common = { path = "./common" }
error = { path = "./error" }
parser = { path = "./parser" }
resolution = { path = "./resolution" }
