[workspace.package]
repository = "https://github.com/olix3001/PurrLang"
version = "0.2.0-alpha"

[workspace]
resolver = "2"
members = [".", "catnip", "codegen", "common", "compiler", "error", "optimizer", "parser", "resolution"]

[workspace.dependencies]
internment = "0.8.3"
ahash = "0.8.11"

common = { path = "./common" }
error = { path = "./error" }
parser = { path = "./parser" }
resolution = { path = "./resolution" }
codegen = { path = "./codegen" }
compiler = { path = "./compiler" }
optimizer = { path = "./optimizer" }
