[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash.workspace = true
common.workspace = true
codegen.workspace = true
parser.workspace = true
error.workspace = true
resolution.workspace = true
