[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true
error.workspace = true
resolution.workspace = true
parser.workspace = true
petgraph = "0.6.5"
