[package]
name = "optimizer"
edition = "2021"

version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true
error.workspace = true
resolution.workspace = true
parser.workspace = true
petgraph = "0.6.5"
