[package]
name = "parser"
edition = "2021"

version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internment.workspace = true
logos = "0.14.0"

common.workspace = true
error.workspace = true
